# NinfoTools

./: .gitignore  CMakeLists.txt  NinfoAicg13.hpp  NinfoAicg14.hpp  NinfoAicgdih.hpp  NinfoAngl.hpp  NinfoBase.hpp  NinfoBasepair.hpp  NinfoBasestack.hpp  NinfoBond.hpp  NinfoContact.hpp  NinfoDef.hpp  NinfoDihd.hpp  NinfoJoiner.cpp  NinfoReader.hpp  NinfoSplitter.cpp  NinfoSplitter.hpp  NinfoTester.cpp  NinfoWriter.hpp  README.md
inp/: InpBase.hpp  InpFileName.hpp  InpNativeInfo.hpp
ninfo/: NinfoAicg13.hpp  NinfoAicg14.hpp  NinfoAicgdih.hpp  NinfoAngl.hpp  NinfoBase.hpp  NinfoBasepair.hpp  NinfoBasestack.hpp  NinfoBond.hpp  NinfoContact.hpp  NinfoDihd.hpp  NinfoFactory.hpp  NinfoJoiner.hpp  NinfoReader.hpp  NinfoSplitter.hpp  NinfoWriter.hpp
